c/examples/writing-a-c-compiler-tests/tests/chapter_16/invalid_types/extra_credit/bit_shift_string.c
// can't apply << or >> to strings
int main(void) {
    "foo" << 3;
    return 0;
}